force-app/main/default/objects/Schedule__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contractor who will be completing the work.</inlineHelpText>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>