force-app/main/default/objects/Schedule__c/fields/External_Resource__c.field-meta.xml
<CustomField>
    <fullName>External_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to automatically assign a resource to the External Resource field on the Schedule Item Record.</inlineHelpText>
    <label>External Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Schedules2</relationshipName>
    <type>Lookup</type>
</CustomField>