force-app/main/default/objects/Schedule__c/fields/Internal_Resource_1__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resource_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to automatically assign a resource to the Internal Resource field on the Schedule Item Record.</inlineHelpText>
    <label>Internal Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>