force-app/main/default/objects/Schedule__c/listViews/All_Schedule_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Schedule_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Complete1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor_Visible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/6/2023 12:00 AM</value>
    </filters>
    <label>All Schedule &amp; Tasks</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
        <portalRole>ABCServicesCustomerUser</portalRole>
    </sharedTo>
</ListView>